feat: 反馈新增联系方式字段，新增允许隐藏反馈
